VO-3129 Fixes missing tooltips on seller floor plan search; ensures text wraps properly and doesn’t hide behind checkbox.

--- a/app/styles/common/_tooltips.scss
+++ b/app/styles/common/_tooltips.scss
@@ -43,11 +43,9 @@
   }
 
   &.top {
-    // more of a top tooltip with the arrow at the left side
     margin: -6px 0 10px;
 
     .tooltip-arrow {
-      left: 30px;
       bottom: -4px;
       border-top-color: #BBB;
 
